// proto/error.proto
syntax = "proto3";

package auth;

option go_package = "github.com/Ostap00034/siproject-beercut-backend/auth-service/proto;auth";

message ErrorResponse {
  string message = 1;
  map<string, string> errors = 2;
}
